<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HelpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#e773aa">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:text="@string/jiwhaja"
            android:textColor="#fff"
            android:textSize="19.5sp"
            android:fontFamily="@font/nanumsquare_eb"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="56dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:textColor="#545454"
                android:textSize="18sp"
                android:fontFamily="@font/nanumsquare_eb"
                android:text="@string/help"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:textColor="#545454"
                android:textSize="15sp"
                android:fontFamily="@font/nanumsquare_r"
                android:text="@string/help_1"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>