<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingFragment">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/setting_page_top_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#e773aa">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="20dp"
            android:text="@string/jiwhaja"
            android:textColor="#fff"
            android:textSize="19.5sp"
            android:fontFamily="@font/nanumsquare_eb"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/setting_page_text1"
        android:layout_below="@id/setting_page_top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:textColor="#545454"
        android:textSize="14sp"
        android:fontFamily="@font/nanumsquare_r"
        android:text="@string/setting_1"/>

    <!--메모 레이아웃-->
    <LinearLayout
        android:id="@+id/setting_page_memo_layout"
        android:layout_below="@id/setting_page_text1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/style_bottom_bfbfbf_1dp_solid_transparent"
        android:orientation="horizontal"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="28dp">

        <EditText
            android:id="@+id/setting_page_memo_editText"
            android:layout_marginLeft="15dp"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:singleLine="true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#aaaaaa"
            android:textSize="14sp"
            android:fontFamily="@font/nanumsquare_r"/>

        <TextView
            android:id="@+id/setting_page_memo_textView"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:visibility="visible"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#545454"
            android:textSize="14sp"
            android:fontFamily="@font/nanumsquare_r"/>

        <Button
            android:id="@+id/setting_page_btn"
            android:text="수정"
            android:layout_gravity="center_vertical"
            android:textColor="#fff"
            android:fontFamily="@font/nanumsquare_eb"
            android:background="@drawable/style_button_e773aa_radius5"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/setting_page_text2"
        android:layout_below="@id/setting_page_memo_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:textColor="#545454"
        android:textSize="14sp"
        android:fontFamily="@font/nanumsquare_r"
        android:text="@string/setting_2"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_below="@id/setting_page_text2"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="28dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Spinner
            android:id="@+id/setting_page_spinner"
            android:background="@drawable/spinner_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:spinnerMode="dropdown">
        </Spinner>

        <ImageView
            android:layout_width="10dp"
            android:layout_height="8dp"
            android:background="@drawable/icon_under_triangle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="9dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/adView"
        ads:adSize="BANNER"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adUnitId="@string/banner_ad_unit_id"/>


</RelativeLayout>